common-applications/test-environment/playground-webiste-frontend-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: playground-website-frontend
  name: playground-website-frontend
